# Agentic-ai-assignments

Assignment 3/Bank Agent/: README.md  main.py  pyproject.toml
Assignment-1/Country_agent_tool/: country_info_bot.py  main.py  pyproject.toml
Assignment-1/mood_analyzer_agent/: README.md  mood_analyzer.py  pyproject.toml
Assignment-1/smart_store_agent/: README.md  product_suggester.py  pyproject.toml
Assignment-2/console-based-support-agent/: README.md  main.py  pyproject.toml
Assignment-4/Library Assistant Agent/: README.md  main.py  pyproject.toml
