[project]
name = "mood-analyzer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents>=1.4.0",
    "crewai>=0.148.0",
    "dotenv>=0.9.9",
    "openai>=1.97.0",
    "openai-agents>=0.2.2",
    "python-dotenv>=1.1.1",
]
